--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 </head>
 
-<body>
+<body class="animacionBanner">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container col-sm-10 col-lg-10">
             <a class="navbar-brand" href="#">
@@ -52,7 +52,7 @@
         </div>
     </nav>
 
-    <header class="banner">
+    <header class="banner animacionBanner">
         <div class="container col-sm-12 col-lg-8">
             <div class="row align-middle">
                 <div class="col px-3">
