--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="Diseño UX – UI, Frontend Developer, User Experience, Experiencia de usuario, User interface,  Interfaz gráfica, ">
+    <meta name="description" content="Diseño UX – UI, Frontend Developer, mejorar interfaz gráfica, uso de metodologías agiles,
+    Investigación y análisis de usabilidad para el desarrollo y prototipado de productos digitales centrado en la experiencia de usuario. 
+    ">
     
 
     <!-- ICONOS -->
