enlace de logos empresas

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <div class="entradaBottom-one col-sm-12 col-md-4 col-lg-4">
                     <div class="card cardExperiencias">
                         <div class="text-center mt-3">
-                            <img src="../portafolio/img/logoHiottech.svg" alt="Logo Hiottech">
+                            <img src="../portafolio/img/logoHiottech.png" alt="Logo Hiottech">
                         </div>
                         <div class="card-body">
                             <h5 class="subTitulo">UX/UI & Front-end Developer</h5>
@@ -304,7 +304,7 @@
                 <div class="entradaBottom-two col-sm-12 col-md-4 col-lg-4">
                     <div class="card cardExperiencias">
                         <div class="text-center mt-3">
-                            <img src="../portafolio/img/logoFormatoGrafico.svg" alt="Logo Formato Gráfico">
+                            <img src="../portafolio/img/logoFormatoGrafico.png" alt="Logo Formato Gráfico">
                         </div>
                         <div class="card-body">
                             <h5 class="subTitulo">Diseñador Gráfico</h5>
@@ -331,7 +331,7 @@
                 <div class="entradaBottom-three col-sm-12 col-md-4 col-lg-4">
                     <div class="card cardExperiencias">
                         <div class="text-center mt-3">
-                            <img src="../portafolio/img/logoSitioUno.svg" alt="Logo SitioUno">
+                            <img src="../portafolio/img/logoSitioUno.png" alt="Logo SitioUno">
                         </div>
                         <div class="card-body">
                             <h5 class="subTitulo">Diseñador Gráfico</h5>
