--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>Neilen Hernandez</title>
 
     <!-- LIBRERIA -->
-    <script src="../portafolio/js/scrollreveal.js"></script>
+    <script src="js/scrollreveal.js"></script>
 
 </head>
 
