--- a/index.html
+++ b/index.html
@@ -395,9 +395,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js " integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj " crossorigin="anonymous "></script>
     
     <!-- SCRIPTS -->
-    <script src="../portafolio/js/script.js"></script>
-    <script src="../portafolio/js/formulario.js"></script>
-    <script src="../portafolio/js/animations.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/animations.js"></script>
 </body>
 
 </html>
