--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="entradaRight-titulo col-sm-12 col-md-12 col-lg-5">
                     <h3 class="mt-3">Neilen Hernández
                     </h3>
-                    <p class="mt-3 entradaRight">
+                    <p class="mt-3 entradaRight descripcion">
                         Me encuentro en la búsqueda de nuevos desafíos profesionales con el objetivo de incrementar experiencias y conocimientos,
                         enfocado en el trabajo en equipo y la aplicación de buenas prácticas y herramientas para completar metas y proyectos.
                         <br> <br>
@@ -187,7 +187,7 @@
                     </div>
                     <div class="card-body ">
                         <h5 class="subTitulo">Diseño Gráfico</h5>
-                        <p class="card-text ">Comprender la esencia de la idea y su usabilidad para la composición de piezas gráficas que proyecten soluciones y cree conexiones.</p>
+                        <p class="card-text ">Comprender la escencia de la idea y su usabilidad para la composición de piezas gráficas que proyecten soluciones y cree conexiones.</p>
                     </div>
                 </div>
             </div>
