--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Web Developer, Desarrollo web, Desarrollo de Software, Experiencia de usuario, User interface,  Interfaz gráfica, ">
-    <meta name="description" content="Web Developer, uso de metodologías agiles y mejores prácticas, desarrollo de componentes reutilisables usando herramientas como: Angular, React, HTML, CSS, Sass, Control de versiones con AWs, Git y GitHub. 
+    <meta name="description" content="Web Developer, desarrollo de componentes reutilisables con herramientas como: Angular, React, HTML, CSS, Sass, Control de versiones con AWS, Git y GitHub. Uso de metodologías agiles y mejores prácticas.
     ">
     
 
