--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
                     <ul>
                         <li>Metodología Scrum</li>
                         <li>Jira Software</li>
-                        <li>Mantins</li>
+                        <li>Mantis Bug Tracker</li>
                         <li>Trello</li>
+                        <li>Slack</li>
                         <li>Miro</li>
                     </ul>
                 </div>
