--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                             </div>
                              <div class="job-description text-center">
                                  <h5 class="subTitulo">Web Developer</h5>
-                                 <p>YOPDev - WabiProject<br>
+                                 <p>YOPDev │ Wabi-Project<br>
                                      <span class="text-muted mb-0" style="font-size: 14px;">jun-2021 | actualidad</span>
                                  </p>
                              </div>
