--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
                 <div class="entradaBottom-one col-12 col-md-4"> 
                     <ul>
                         <li>Angular</li>
-                        <li>React</li>
                         <li>Bootstrap</li>
                         <li>HTML</li>
                         <li>CSS │ Sass </li>
@@ -268,7 +267,7 @@
                                 <img src="img/logoYOPDev.png" alt="Logo YOPDev">
                             </div>
                              <div class="job-description text-center">
-                                 <h5 class="subTitulo">Web Developer</h5>
+                                 <h5 class="subTitulo">FrontEnd Developer</h5>
                                  <p>YOPDev<br>
                                      <span class="text-muted mb-0" style="font-size: 14px;">jun-2021 | actualidad</span>
                                  </p>
