--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="col px-3">
                     <div>
                         <h1 class="headerTitulo"> Neilen Hernández</h1>
-                        <h4 class="headerSubTitulo">Web Developer</h4>
+                        <h4 class="headerSubTitulo">FrontEnd Developer</h4>
                         <p class="mt-3 headerLinea">Cuando los recursos están disponibles, <br> todo es posible.</p>
                     </div>
                     <div class="col headerRedes">
